tests/suite/errors/e16_wrong_enum_fields.rs
// err: missing field

enum Shape {
    Rect { w: f32, h: f32 },
}

fn main() {
    let s: Shape = Shape::Rect { w: 1.0 };
}
